# pyfileanalyzer

./: CLAUDE.md  LICENSE  PROJECT_PLAN.md  README.md  dupfiles.json  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: api_reference.md  index.md  installation.md  user_guide.md
scripts/: release.sh
src/pyfileanalyzer/: __main__.py  cli.py  config.py  logging.py
src/pyfileanalyzer/analyzers/: base.py  duplicates.py  file_types.py  large_files.py  old_files.py  usage_patterns.py
src/pyfileanalyzer/core/: analyzer.py  database.py  progress.py  scanner.py
src/pyfileanalyzer/operations/: file_ops.py  undo.py
src/pyfileanalyzer/reports/: console.py  csv_reporter.py  html_reporter.py  json_reporter.py
src/pyfileanalyzer/utils/: file_utils.py  formatting.py  hashing.py  platform.py
tests/test_analyzers/: test_duplicates.py
