[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfileanalyzer"
version = "0.1.0"
description = "Analyze and safely clean large directories (duplicates, large/old files)"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name="PyFileAnalyzer Maintainers"}]
dependencies = [
    "click>=8.0",
    "tqdm>=4.60",
    "pandas>=1.3",
    "send2trash>=1.8",
    "colorama>=0.4",
    "rich>=12.0",
    "loguru>=0.7",
]

[project.scripts]
pyfileanalyzer = "pyfileanalyzer.cli:main"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
